syncmay.sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: syncthing
  labels:
    run: syncthing
spec:
  selector:
    matchLabels:
      run: syncthing
  serviceName: "syncthing"
  template:
    metadata:
      generateName: syncthing-prod
      labels:
        run: syncthing
    spec:
      containers:
        - name: syncthing-prod
          image: linuxserver/syncthing
          imagePullPolicy: Always
          ports:
            - name: syncthing
              containerPort: 8384
          volumeMounts:
            - mountPath: "/config"
              name: syncthing-data
      volumes:
  volumeClaimTemplates:
   - metadata:
       name: syncthing-data
     spec:
       accessModes: [ "ReadWriteOnce" ]
       #storageClassName: "openebs-standalone"
       resources:
         requests:
           storage: 1Gi
