oauth2_proxy.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  labels:
    k8s-app: oauth
  name: oauth
  namespace: default
spec:
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      k8s-app: oauth
  template:
    metadata:
      labels:
        k8s-app: oauth
    spec:
      containers:
      - name: oauth
        image: bcawthra/oauth2_proxy:latest
        args:
        - --email-domain=mauricioryan@gmail.com
        - --upstream=file:///dev/null
        - --http-address=0.0.0.0:4180
        ports:
        - containerPort: 4180
          protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: oauth
  name: oauth
  namespace: default
spec:
  ports:
  - name: oauth
    port: 4180
    targetPort: 4180
  selector:
    k8s-app: oauth
