syncmay.svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: syncthing
  name: syncthing
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8384
  selector:
    run: syncthing
status:
  loadBalancer: {}
