syncmay.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    run: web
  annotations:
    nginx.ingress.kubernetes.io/lua-resty-waf: "active"
    nginx.ingress.kubernetes.io/rewrite-target: /
    certmanager.k8s.io/acme-challenge-type: http01
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
  name: web
spec:
  rules:
  # - http:
  #     paths:
  #     - path: /
  #       backend:
  #         serviceName: web
  #         servicePort: 8080
  - host: mauricioryan-syncthing.kube.um.edu.ar
    http:
      paths:
      - path: /
        backend:
          serviceName: syncthing
          servicePort: 80

  tls:
  - hosts:
    #- mauricioryan-web.kube.um.edu.ar
    - mauricioryan-syncthing.kube.um.edu.ar
    secretName: mauricioryan-cert
